# repository-service-tuf-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  Dockerfile  MAINTAINERS.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  SECURITY_INSIGHTS.yml  app.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  settings.ini  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  functional-tests.yml  publish_container.yml  publish_docker_dev.yml  review-approved.yml  scorecard.yml  test_docker_build.yml  update-pre-commit-hooks.yml  update-python-deps.yml
database/: README.md
docs/: requirements.txt  swagger.json  update-swagger-ui.sh
docs/api/: swagger.json
docs/diagrams/: C1.puml  C2.puml
docs/source/: conf.py
kaprien_api/: __init__.py  __version__.py  bootstrap.py  config.py  metadata.py  repository_settings.py  services.py  targets.py  tasks.py  token.py  utils.py
kaprien_api/api/: bootstrap.py  config.py  metadata.py  repository_settings.py  targets.py  tasks.py  token.py
kaprien_api/tuf/: __init__.py  interfaces.py  repository.py  services.py
kaprien_api/users/: crud.py  (+1 more)
repository_service_tuf_api/: __init__.py  __version__.py  artifacts.py  bootstrap.py  common_models.py  config.py  delegations.py  loaders.py  metadata.py  targets.py  tasks.py  token.py
tests/: __init__.py  conftest.py
tuf_repository_service_api/: __init__.py  bootstrap.py  config.py  metadata.py  targets.py  tasks.py  token.py
(+98 files in other folders)
